@@ -1,3 +1,7 @@
+2010/07/22
+    Patch by Victor Luchitz for optional SMPP v3.4 tags used to
+    indicate message_id and final message state in delivery reports.
+
 2010/07/10
     Added documentation tree and building ("make docs").
     Patch by Victor Luchitz to configure ton/npi.
